uipath-sales/main/default/objects/Opportunity/fields/Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_End_Date__c</fullName>
    <description>SS-3 / SS-16</description>
    <label>Contract End Date</label>
    <type>Date</type>
</CustomField>