uipath-sales/main/default/objects/Opportunity/fields/Contract_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Start_Date__c</fullName>
    <description>SS-3 / SS-16</description>
    <label>Contract Start Date</label>
    <type>Date</type>
</CustomField>