uipath-sales/main/default/objects/Opportunity/fields/FinanceReviewReached__c.field-meta.xml
<CustomField>
    <fullName>FinanceReviewReached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checked when finance case is moved to finance review. Opportunity can&apos;t be moved to Closed Won Booked when this has not been checked yet. Used to enforce the right Finance Case process for inside sales and Deal Hub.</description>
    <label>Finance Review Reached</label>
    <type>Checkbox</type>
</CustomField>