uipath-sales/main/default/objects/Opportunity/fields/Payment_Cycle__c.field-meta.xml
<CustomField>
    <fullName>Payment_Cycle__c</fullName>
    <description>SS-3 / SS-15</description>
    <label>Billing Cycle</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Cycle</valueSetName>
    </valueSet>
</CustomField>