uipath-sales/main/default/objects/Opportunity/fields/Termination_Clause__c.field-meta.xml
<CustomField>
    <fullName>Termination_Clause__c</fullName>
    <description>SS-3 / SS-15</description>
    <label>Termination Clause</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Termination_Clause</valueSetName>
    </valueSet>
</CustomField>